--- a/backServer/vistas/css/ti_vista-flota.css
+++ b/backServer/vistas/css/ti_vista-flota.css
@@ -1,17 +1,19 @@
 body {
 	background: #47476b;
 	font-family: 'Bebas Neue', cursive;
-	;
 }
 
 header {
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	width: 100%;
 	height: 600px;
 	background: #654ea3;
 	/* fallback for old browsers */
-	background: -webkit-linear-gradient(to right, hsla(256, 35%, 47%, 0.666), hsla(284, 100%, 9%, 0.666)), url(../logo.jpg);
+	background: -webkit-linear-gradient(to right, hsla(256, 35%, 47%, 0.666), hsla(284, 100%, 9%, 0.666)), url(../logo-m.png);
 	/* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to right, hsla(256, 35%, 47%, 0.666), hsla(284, 100%, 9%, 0.666)), url(../logo.jpg);
+	background: linear-gradient(to right, hsla(256, 35%, 47%, 0.666), hsla(284, 100%, 9%, 0.666)), url(../logo-m.png);
 	/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 	background-size: cover;
 	background-attachment: fixed;
@@ -19,42 +21,69 @@ header {
 }
 
 nav {
-	text-align: right;
-	padding: 30px 50px 0 0;
+	background: #fff;
+	/* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, hsla(256, 35%, 47%, 0.666), hsla(284, 100%, 9%, 0.666)), url(../logo-m.png);
+	/* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, hsla(256, 35%, 47%, 0.666), hsla(284, 100%, 9%, 0.666)), url(../logo-m.png);
+	/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-nav>a {
+.nav-container {
+	color: white;
+	height: 100%;
+	max-height: 60px;
+	display: flex;
+	padding: 12px 60px;
+}
+
+.nav-desktop {
+	display: flex;
+
+	-webkit-box-align: center;
+	align-items: center;
+}
+
+.nav-desktop h2{
+	position: relative;
+	color: white;
+	letter-spacing: 3px;
+	padding: 2px 0px;
+	margin: 0px 30px;
+}
+
+.nav-desktop a {
+	position: relative;
+	color: white;
+	font-weight: 300;
+	letter-spacing: 0.5px;
+	text-decoration: none;
+	padding: 2px 0px;
+	margin: 0px 30px;
+}
+
+.nav-desktop>a {
 	color: #fff;
 	font-weight: 300px;
-	text-decoration: none;
 	margin-right: 10px;
-	font-size: 21px;
+	font-size: 30px;
 }
 
-nav>a:hover {
+.nav-desktop>a:hover {
 	text-decoration: underline;
 }
 
-header .textos-header {
-	display: flex;
-	height: 430px;
-	width: 100%;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-	text-align: center;
-}
-
-.textos-header h1{
-	font-size: 60px;
+.left {
+	font-size: 30px;
 	color: #fff;
 }
 
-.textos-header h2{
-	font-size: 42px;
-	font-weight: 300;
+.right {
+	margin-left: auto;
+	font-size: 27px;
 	color: #fff;
 }
+
 .wave {
 	position: absolute;
 	bottom: 0;
@@ -63,4 +92,5 @@ header .textos-header {
 
 p {
 	font-size: 50px;
+	padding-left: 30px;
 }
