--- a/backServer/vistas/css/ti_ingreso.css
+++ b/backServer/vistas/css/ti_ingreso.css
@@ -20,10 +20,42 @@ body {
 }
 
 .form__section {
-	color: #fff;
+	position: relative;
+	--color: #5757577e;
 }
 
 .form__input {
+	width: 100%;
+	font-family: inherit;
+	font-size: 1rem;
+	color: #706c6c;
+	padding: .6em .3em;
+	border: none;
+	outline: none;
+	border-bottom: 1px solid var(--color);
+}
+
+.form__label {
+	color: var(--color);
+	cursor: pointer;
+	position: absolute;
+	top: 0;
+	left: 5px;
+	transform: translateY(10px);
+	transition: transform .5s, color .3s;
+}
+
+.form__input:focus+.form__label
+
+/*,
+.form__input:not(:placeholder-show)+.form__label*/
+	{
+	transform: translateY(-12px)scale(.7);
+	transform-origin: top left;
+	--color: #3866f2;
+}
+
+/*.form__input {
 	width: 102%;
 	padding: 6px;
 	margin: 5px 0;
@@ -37,7 +69,7 @@ body {
 	background: linear-gradient(to bottom, transparent, #b3b3cc);
 	outline: none;
 	border-bottom: 3px solid #7575a3;
-}
+}*/
 
 .form-img {
 	flex: 1;
