--- a/backServer/vistas/css/ti_vista-flota.css
+++ b/backServer/vistas/css/ti_vista-flota.css
@@ -44,7 +44,7 @@ nav {
 	align-items: center;
 }
 
-.nav-desktop h2{
+.nav-desktop h2 {
 	position: relative;
 	color: white;
 	letter-spacing: 3px;
@@ -90,7 +90,43 @@ nav {
 	width: 100%;
 }
 
-p {
-	font-size: 50px;
-	padding-left: 30px;
+.flex {
+	display: flex;
 }
+
+.flex__container {
+	display: flex;
+
+	-webkit-box-align: center;
+	align-items: center;
+
+}
+
+.flex-container-img-equipo {
+	width: 480px;
+	height: 300px;
+	margin: 50px 30px;
+	margin-top: 50px;
+	background-size: cover;
+	background-position: center;
+	position: relative;
+	overflow: hidden;
+}
+
+.flex-container-img-equipo:hover::after{
+	transform: translateY(0);
+}
+
+.flex-container-img-equipo::after {
+	content: "Info de la maquina";
+	font-size: 2rem;
+	color: #fff;
+	background-color: #654ea396;
+	position: absolute;
+	inset: 0;
+	display: grid;
+	place-items: center;
+	transform: translateY(100%);
+	transition: transform .3s;
+}
+
