--- a/backServer/vistas/css/ti_ingreso.css
+++ b/backServer/vistas/css/ti_ingreso.css
@@ -21,14 +21,15 @@ body {
 
 .form__section {
 	position: relative;
-	--color: #5757577e;
+	--color: #706c6c;
 }
 
 .form__input {
 	width: 100%;
 	font-family: inherit;
 	font-size: 1rem;
-	color: #706c6c;
+	color: #000;
+	background: transparent;
 	padding: .6em .3em;
 	border: none;
 	outline: none;
@@ -45,31 +46,34 @@ body {
 	transition: transform .5s, color .3s;
 }
 
-.form__input:focus+.form__label
-
-/*,
-.form__input:not(:placeholder-show)+.form__label*/
-	{
-	transform: translateY(-12px)scale(.7);
+.form__input:focus + .form__label,
+.form__input:not(:placeholder-shown) + .form__label {
+	transform: translateY(-9px)scale(.8);
 	transform-origin: top left;
 	--color: #3866f2;
-}
-
-/*.form__input {
-	width: 102%;
-	padding: 6px;
-	margin: 5px 0;
-	border: none;
-	border-bottom: 3px solid #a9a3b9;
-	background: transparent;
-	color: #000;
 }
 
 .form__input:focus {
 	background: linear-gradient(to bottom, transparent, #b3b3cc);
 	outline: none;
-	border-bottom: 3px solid #7575a3;
-}*/
+	border-bottom: 1px solid #7575a3;
+}
+
+.form__input--active{
+	width: 100%;
+	font-family: inherit;
+	font-size: 1rem;
+	color: #000;
+	background: transparent;
+	padding: .7em .3em;
+	border: none;
+	outline: none;
+	border-bottom: 1px solid var(--color);
+}
+
+.form__input--active:focus{
+	background: transparent; /* modificar */
+}
 
 .form-img {
 	flex: 1;
