--- a/backServer/vistas/css/ti_vista-flota.css
+++ b/backServer/vistas/css/ti_vista-flota.css
@@ -90,15 +90,12 @@ nav {
 	width: 100%;
 }
 
-.flex {
-	display: flex;
-}
-
-.flex__container {
+.conteiner-flotas {
 	display: inline-flex;
+	justify-content: space-evenly;
 }
 
-.flex-container-img-equipo {
+.conteiner-flotas-img {
 	width: 480px;
 	height: 300px;
 	margin: 50px 30px;
@@ -109,11 +106,11 @@ nav {
 	overflow: hidden;
 }
 
-.flex-container-img-equipo:hover::after{
+.conteiner-flotas-img:hover::after{
 	transform: translateY(0);
 }
 
-.flex-container-img-equipo::after {
+.conteiner-flotas-img::after {
 	content: "Info de la maquina";
 	font-size: 2rem;
 	color: #fff;
