--- a/backServer/vistas/css/add_flote.css
+++ b/backServer/vistas/css/add_flote.css
@@ -62,20 +62,20 @@ body {
 }
 
 .btn-outline-success {
-    --bs-btn-color: #fff;
-    --bs-btn-border-color: #47476b;
-    --bs-btn-hover-color: #fff;
-    --bs-btn-hover-bg: #47476b;
-    --bs-btn-hover-border-color: #47476b;
-    --bs-btn-focus-shadow-rgb: 25,135,84;
-    --bs-btn-active-color: #fff;
-    --bs-btn-active-bg: #47476b;
-    --bs-btn-active-border-color: #47476b;
-    --bs-btn-active-shadow: inset 0 3px 5pxrgba(0, 0, 0, 0.125);
-    --bs-btn-disabled-color: #47476b;
-    --bs-btn-disabled-bg: transparent;
-    --bs-btn-disabled-border-color: #47476b;
-    --bs-gradient: none;
+	--bs-btn-color: #fff;
+	--bs-btn-border-color: #47476b;
+	--bs-btn-hover-color: #fff;
+	--bs-btn-hover-bg: #47476b;
+	--bs-btn-hover-border-color: #47476b;
+	--bs-btn-focus-shadow-rgb: 25, 135, 84;
+	--bs-btn-active-color: #fff;
+	--bs-btn-active-bg: #47476b;
+	--bs-btn-active-border-color: #47476b;
+	--bs-btn-active-shadow: inset 0 3px 5pxrgba(0, 0, 0, 0.125);
+	--bs-btn-disabled-color: #47476b;
+	--bs-btn-disabled-bg: transparent;
+	--bs-btn-disabled-border-color: #47476b;
+	--bs-gradient: none;
 }
 
 .flex-container {
