--- a/backServer/vistas/css/ti_vista-flota.css
+++ b/backServer/vistas/css/ti_vista-flota.css
@@ -67,20 +67,20 @@ nav {
 }
 
 .btn-outline-success {
-    --bs-btn-color: #fff;
-    --bs-btn-border-color: #47476b;
-    --bs-btn-hover-color: #fff;
-    --bs-btn-hover-bg: #47476b;
-    --bs-btn-hover-border-color: #47476b;
-    --bs-btn-focus-shadow-rgb: 25,135,84;
-    --bs-btn-active-color: #fff;
-    --bs-btn-active-bg: #47476b;
-    --bs-btn-active-border-color: #47476b;
-    --bs-btn-active-shadow: inset 0 3px 5pxrgba(0, 0, 0, 0.125);
-    --bs-btn-disabled-color: #47476b;
-    --bs-btn-disabled-bg: transparent;
-    --bs-btn-disabled-border-color: #47476b;
-    --bs-gradient: none;
+	--bs-btn-color: #fff;
+	--bs-btn-border-color: #47476b;
+	--bs-btn-hover-color: #fff;
+	--bs-btn-hover-bg: #47476b;
+	--bs-btn-hover-border-color: #47476b;
+	--bs-btn-focus-shadow-rgb: 25, 135, 84;
+	--bs-btn-active-color: #fff;
+	--bs-btn-active-bg: #47476b;
+	--bs-btn-active-border-color: #47476b;
+	--bs-btn-active-shadow: inset 0 3px 5pxrgba(0, 0, 0, 0.125);
+	--bs-btn-disabled-color: #47476b;
+	--bs-btn-disabled-bg: transparent;
+	--bs-btn-disabled-border-color: #47476b;
+	--bs-gradient: none;
 }
 
 header {
@@ -107,6 +107,12 @@ header {
 	width: 100%;
 }
 
+.titulo {
+	letter-spacing: 3px;
+	color: #fff;
+	text-shadow: 0 0 6px rgba(0, 0, 0, .5);
+}
+
 .contenedor-flotes {
 	display: inline-flex;
 	justify-content: space-evenly;
@@ -125,7 +131,7 @@ header {
 	box-shadow: 0 0 6px 0 rgba(0, 0, 0, .5);
 }
 
-.contenedor-flotes-img > img {
+.contenedor-flotes-img>img {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
@@ -147,7 +153,7 @@ header {
 
 }
 
-.contenedor-flotes-img:hover .hover-img{
+.contenedor-flotes-img:hover .hover-img {
 	transform: scale(1);
 }
 
