--- a/backServer/vistas/css/flota.css
+++ b/backServer/vistas/css/flota.css
@@ -8,3 +8,134 @@ body {
 	font-family: 'Poppins', sans-serif
 }
 
+nav {
+	background: #fff;
+	/* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, hsla(256, 35%, 47%, 0.666), hsla(284, 100%, 9%, 0.666)), url(../logo-m.png);
+	/* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, hsla(256, 35%, 47%, 0.666), hsla(284, 100%, 9%, 0.666)), url(../logo-m.png);
+	/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	z-index: 100;
+}
+
+.nav-bar {
+	position: sticky;
+	top: 0;
+	display: flex;
+	padding: 0 3%;
+	min-height: 68px;
+	align-items: center;
+}
+
+.container-fluid {
+	display: flex;
+}
+
+.nav-desktop {
+	display: flex;
+	align-items: center;
+}
+
+.logo {
+	display: flex;
+}
+
+.logo>img {
+	height: 50px;
+
+}
+
+.nav-desktop a {
+	position: relative;
+	color: white;
+	font-weight: 300;
+	letter-spacing: 0.5px;
+	text-decoration: none;
+	margin: 0px 30px;
+}
+
+.nav-desktop>a {
+	color: #fff;
+	font-weight: 300px;
+	margin-right: 10px;
+	font-size: 24px;
+}
+
+.nav-desktop>a:hover {
+	text-decoration: underline;
+}
+
+.right {
+	margin-left: auto;
+	font-size: 27px;
+	color: #fff;
+}
+
+.btn-outline-success {
+	--bs-btn-color: #fff;
+	--bs-btn-border-color: #47476b;
+	--bs-btn-hover-color: #fff;
+	--bs-btn-hover-bg: #47476b;
+	--bs-btn-hover-border-color: #47476b;
+	--bs-btn-focus-shadow-rgb: 25, 135, 84;
+	--bs-btn-active-color: #fff;
+	--bs-btn-active-bg: #47476b;
+	--bs-btn-active-border-color: #47476b;
+	--bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+	--bs-btn-disabled-color: #47476b;
+	--bs-btn-disabled-bg: transparent;
+	--bs-btn-disabled-border-color: #47476b;
+	--bs-gradient: none;
+}
+
+.card{
+	align-items: center;
+	justify-content: center;
+	margin: auto;
+	border: 0 !important;
+	box-shadow: 0 0 6px 0 rgba(0, 0, 0, .5);
+}
+
+/*.flex-container {
+	display: flex;
+	align-items: center;
+	flex-wrap: wrap;
+	flex-direction: column;
+	justify-content: center;
+	background: #fff;
+	margin: 50px auto;
+	max-width: 600px;
+	max-height: 800px;
+	border: 3px solid #a9a3b9;
+	box-shadow: 0 0 6px 0 rgba(0, 0, 0, .5);
+}
+
+.contenedor-img {
+	width: 500px;
+	height: 350px;
+	margin: 50px 30px;
+	background-size: cover;
+	background-position: center;
+	position: relative;
+	overflow: hidden;
+	box-shadow: 0 0 6px 0 rgba(0, 0, 0, .5);
+}
+
+.contenedor-img>img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	display: block;
+}
+
+.contenedor-info {
+	display: flex;
+}
+
+.list-group-item {
+	display: flex;
+	align-items: center;
+	flex-wrap: wrap;
+	flex-direction: column;
+	justify-content: center;
+}*/
