--- a/backServer/vistas/css/ti_ingreso.css
+++ b/backServer/vistas/css/ti_ingreso.css
@@ -13,6 +13,7 @@ body {
 	max-width: 600px;
 	max-height: 600px;
 	border: 3px solid #a9a3b9;
+	box-shadow: 0 0 6px 0 rgba(0, 0, 0, .5);
 }
 
 .form {
