--- a/backServer/vistas/css/ti_vista-flota.css
+++ b/backServer/vistas/css/ti_vista-flota.css
@@ -44,6 +44,7 @@ nav {
 
 .nav-desktop a {
 	position: relative;
+	font-size: 21px;
 	color: white;
 	font-weight: 300;
 	letter-spacing: 0.5px;
@@ -62,7 +63,6 @@ nav {
 
 .right {
 	margin-left: auto;
-	font-size: 27px;
 	color: #fff;
 }
 
@@ -76,7 +76,7 @@ nav {
 	--bs-btn-active-color: #fff;
 	--bs-btn-active-bg: #47476b;
 	--bs-btn-active-border-color: #47476b;
-	--bs-btn-active-shadow: inset 0 3px 5pxrgba(0, 0, 0, 0.125);
+	--bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
 	--bs-btn-disabled-color: #47476b;
 	--bs-btn-disabled-bg: transparent;
 	--bs-btn-disabled-border-color: #47476b;
@@ -86,18 +86,15 @@ nav {
 header {
 	z-index: 10;
 	display: flex;
-	align-items: center;
-	justify-content: center;
-	width: 100%;
 	height: 600px;
 	background: #654ea3;
 	/* fallback for old browsers */
-	background: -webkit-linear-gradient(to right, hsla(256, 35%, 47%, 0.666), hsla(284, 100%, 9%, 0.666)), url(../logo-m.png);
+	background: -webkit-linear-gradient(to right, hsla(256, 35%, 47%, 0.666), hsla(284, 100%, 9%, 0.666)), url(../logo-m1.png);
 	/* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to right, hsla(256, 35%, 47%, 0.666), hsla(284, 100%, 9%, 0.666)), url(../logo-m.png);
+	background: linear-gradient(to right, hsla(256, 35%, 47%, 0.666), hsla(284, 100%, 9%, 0.666)), url(../logo-m1.png);
 	/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 	background-size: cover;
-	background-attachment: fixed;
+	background-position: center;
 	position: relative;
 }
 
