--- a/backServer/vistas/css/ti_vista-flota.css
+++ b/backServer/vistas/css/ti_vista-flota.css
@@ -108,13 +108,18 @@ header {
 	text-shadow: 0 0 6px rgba(0, 0, 0, .5);
 }
 
-.contenedor-flotes {
+.card{
+	border: 0 !important;
+	background: transparent;
+}
+
+.container-flotes {
 	display: inline-flex;
 	justify-content: space-evenly;
 	flex-wrap: wrap;
 }
 
-.contenedor-flotes-img {
+.container-flotes-img {
 	width: 500px;
 	height: 350px;
 	margin: 50px 30px;
@@ -126,7 +131,7 @@ header {
 	box-shadow: 0 0 6px 0 rgba(0, 0, 0, .5);
 }
 
-.contenedor-flotes-img>img {
+.container-flotes-img>img {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
@@ -148,15 +153,15 @@ header {
 
 }
 
-.contenedor-flotes-img:hover .hover-img {
+.container-flotes-img:hover .hover-img {
 	transform: scale(1);
 }
 
-/*.contenedor-flotes-img:hover::after {
+/*.container-flotes-img:hover::after {
 	transform: translateY(0);
 }
 
-.contenedor-flotes-img::after {
+.container-flotes-img::after {
 	content: "Maquinaria";
 	font-size: 2rem;
 	color: #fff;
