--- a/backServer/vistas/css/ti_ingreso.css
+++ b/backServer/vistas/css/ti_ingreso.css
@@ -1,5 +1,17 @@
 body {
-	background: #47476b;
+	font-family: 'Poppins', sans-serif;
+	background: #654ea3;
+}
+
+.container {
+	/* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, hsla(256, 35%, 47%, 0.413), hsla(284, 100%, 9%, 0.419)), url(../fondo-in1.png);
+	/* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, hsla(256, 35%, 47%, 0.413), hsla(284, 100%, 9%, 0.419)), url(../fondo-in1.png);
+	/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	background-size: cover;
+	background-position: center;
+	position: relative;
 }
 
 .flex-container {
