--- a/backServer/vistas/css/flota.css
+++ b/backServer/vistas/css/flota.css
@@ -18,57 +18,12 @@ nav {
 	z-index: 100;
 }
 
-.nav-bar {
-	position: sticky;
-	top: 0;
-	display: flex;
-	padding: 0 3%;
-	min-height: 68px;
-	align-items: center;
+.navbar {
+	padding: 0 0 0 1%;
 }
 
-.container-fluid {
-	display: flex;
-}
-
-.nav-desktop {
-	display: flex;
-	align-items: center;
-}
-
-.logo {
-	display: flex;
-}
-
-.logo>img {
-	height: 50px;
-
-}
-
-.nav-desktop a {
-	position: relative;
-	color: white;
-	font-weight: 300;
-	letter-spacing: 0.5px;
-	text-decoration: none !important;
-	margin: 0px 30px;
-}
-
-.nav-desktop>a {
-	color: #fff;
-	font-weight: 300px;
-	margin-right: 10px;
-	font-size: 24px;
-}
-
-.nav-desktop>a:hover {
-	text-decoration: underline;
-}
-
-.right {
-	margin-left: auto;
-	font-size: 27px;
-	color: #fff;
+.search {
+	margin-right: 8px;
 }
 
 .btn-outline-success {
@@ -95,47 +50,3 @@ nav {
 	border: 0 !important;
 	box-shadow: 0 0 6px 0 rgba(0, 0, 0, .5);
 }
-
-/*.flex-container {
-	display: flex;
-	align-items: center;
-	flex-wrap: wrap;
-	flex-direction: column;
-	justify-content: center;
-	background: #fff;
-	margin: 50px auto;
-	max-width: 600px;
-	max-height: 800px;
-	border: 3px solid #a9a3b9;
-	box-shadow: 0 0 6px 0 rgba(0, 0, 0, .5);
-}
-
-.contenedor-img {
-	width: 500px;
-	height: 350px;
-	margin: 50px 30px;
-	background-size: cover;
-	background-position: center;
-	position: relative;
-	overflow: hidden;
-	box-shadow: 0 0 6px 0 rgba(0, 0, 0, .5);
-}
-
-.contenedor-img>img {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-	display: block;
-}
-
-.contenedor-info {
-	display: flex;
-}
-
-.list-group-item {
-	display: flex;
-	align-items: center;
-	flex-wrap: wrap;
-	flex-direction: column;
-	justify-content: center;
-}*/
