--- a/backServer/vistas/css/ti_vista-flota.css
+++ b/backServer/vistas/css/ti_vista-flota.css
@@ -11,57 +11,15 @@ nav {
 	background: linear-gradient(to right, hsla(256, 35%, 47%, 0.666), hsla(284, 100%, 9%, 0.666)), url(../logo-m.png);
 	/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 	z-index: 100;
-}
-
-.navbar {
-	position: sticky;
-	top: 0;
-	display: flex;
-	padding: 0 3%;
-	min-height: 68px;
-	align-items: center;
-}
-
-.container-fluid {
-	display: flex;
-}
-
-.nav-desktop {
-	display: flex;
-	align-items: center;
-}
-
-.logo {
-	display: flex;
-	height: 50px;
-	min-width: 120px;
-}
-
-.logo>img {
-	height: 100%;
 	width: 100%;
 }
 
-.nav-desktop a {
-	position: relative;
-	font-size: 18px !important;
-	color: white;
-	font-weight: 300;
-	letter-spacing: 0.5px;
-	text-decoration: none;
-	margin: 0px 30px;
+.navbar {
+	padding: 0 0 0 1%;
 }
 
-.nav-desktop>a {
-	color: #fff;
-	font-weight: 300px;
-	margin-right: 10px;
-	font-size: 24px;
-}
-
-.right {
-	margin-left: auto;
-	color: #fff;
+.search {
+	margin-right: 8px;
 }
 
 .btn-outline-success {
@@ -108,18 +66,9 @@ header {
 	text-shadow: 0 0 6px rgba(0, 0, 0, .5);
 }
 
-.card{
-	border: 0 !important;
+.card {
+	border: 0;
 	background: transparent;
-}
-
-.container-flotes {
-	display: inline-flex;
-	justify-content: space-evenly;
-	flex-wrap: wrap;
-}
-
-.container-flotes-img {
 	background-size: cover;
 	background-position: center;
 	position: relative;
@@ -128,14 +77,14 @@ header {
 	box-shadow: 0 0 6px 0 rgba(0, 0, 0, .5);
 }
 
-.container-flotes-img>img {
+.card>img {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
 	display: block;
 }
 
-.hover-img {
+.card-hover {
 	position: absolute;
 	width: 100%;
 	height: 100%;
@@ -150,8 +99,18 @@ header {
 
 }
 
-.container-flotes-img:hover .hover-img {
+.card:hover .card-hover {
 	transform: scale(1);
+}
+
+
+.dropdown-menu {
+	background-color: #272727e6;
+	z-index: 1000x;
+}
+
+.dropdown-item {
+	color: #fff;
 }
 
 /*.container-flotes-img:hover::after {
