--- a/backServer/vistas/css/ti_ingreso.css
+++ b/backServer/vistas/css/ti_ingreso.css
@@ -1,29 +1,32 @@
 body {
-	font-family: 'Poppins', sans-serif;	
+	background: #fff;
+	min-height: 100vh;
 	/* fallback for old browsers */
-	background: -webkit-linear-gradient(to right, hsla(256, 35%, 47%, 0.413), hsla(284, 100%, 9%, 0.419)), url(../fondo-in1.png);
+	background: -webkit-linear-gradient(to right, hsla(256, 35%, 47%, 0.647), hsla(284, 100%, 9%, 0.63)), url(../fondo-in1.png);
 	/* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to right, hsla(256, 35%, 47%, 0.413), hsla(284, 100%, 9%, 0.419)), url(../fondo-in1.png);
+	background: linear-gradient(to right, hsla(256, 35%, 47%, 0.647), hsla(284, 100%, 9%, 0.63)), url(../fondo-in1.png);
 	/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 	background-size: cover;
-	background-position: center;
-	object-fit: cover;
+	background-position: bottom center;
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+	overflow: hidden;
 }
 
-.alert{
-	z-index: 1000;
+.alert {
+	z-index: 1000 !important;
 }
 
-.container-fluid{
-	z-index: 100;
+.container-fluid {
+	z-index: 100 !important;
 }
 
-.card{
+.card {
 	align-items: center;
 	justify-content: center;
 	margin: auto;
 	border: 3px outset hsla(256, 35%, 47%, 0.711);
-	box-shadow: 0 0 6px 0 rgba(0, 0, 0, .5);		
+	box-shadow: 0 0 6px 0 rgba(0, 0, 0, .5);
 }
 
 .bi-eye-slash {
@@ -35,18 +38,18 @@ body {
 }
 
 .btn-outline-dark {
-    --bs-btn-color: #000;
-    --bs-btn-border-color: #ced4da;
-    --bs-btn-hover-color: #fff;
-    --bs-btn-hover-bg: #654ea3;
-    --bs-btn-hover-border-color: #654ea3;
-    --bs-btn-focus-shadow-rgb: 33,37,41;
-    --bs-btn-active-color: #fff;
-    --bs-btn-active-bg: #22002e;
-    --bs-btn-active-border-color: #22002e;
-    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-    --bs-btn-disabled-color: #000;
-    --bs-btn-disabled-bg: transparent;
-    --bs-btn-disabled-border-color: #ced4da;
-    --bs-gradient: none;
+	--bs-btn-color: #000;
+	--bs-btn-border-color: #ced4da;
+	--bs-btn-hover-color: #fff;
+	--bs-btn-hover-bg: #654ea3;
+	--bs-btn-hover-border-color: #654ea3;
+	--bs-btn-focus-shadow-rgb: 33, 37, 41;
+	--bs-btn-active-color: #fff;
+	--bs-btn-active-bg: #22002e;
+	--bs-btn-active-border-color: #22002e;
+	--bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+	--bs-btn-disabled-color: #000;
+	--bs-btn-disabled-bg: transparent;
+	--bs-btn-disabled-border-color: #ced4da;
+	--bs-gradient: none;
 }
