nav responsive listo

--- a/backServer/vistas/css/flota.css
+++ b/backServer/vistas/css/flota.css
@@ -50,3 +50,55 @@ nav {
 	border: 0 !important;
 	box-shadow: 0 0 6px 0 rgba(0, 0, 0, .5);
 }
+
+.responsive {
+	display: none !important;
+}
+
+@media only screen and (max-width: 820px) {
+	.no-responsive {
+		display: none !important;
+	}
+
+	.responsive {
+		display: flex !important;
+	}
+
+	.fa-arrow-left{
+		padding-top: 3px;
+	}
+
+	.fa-bars{
+		padding-top: 3px;
+	}
+
+	.fa-solid {
+		font-size: 22px;
+	}
+
+	.offcanvas {
+		background: #fff;
+		/* fallback for old browsers */
+		background: -webkit-linear-gradient(to top, hsl(256, 35%, 47%), hsl(284, 93%, 16%));
+		/* Chrome 10-25, Safari 5.1-6 */
+		background: linear-gradient(to top, hsl(256, 35%, 47%), hsl(284, 93%, 16%));
+		/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	}
+
+	.offcanvas-title {
+		color: #fff;
+	}
+
+	.nav-link {
+		color: #fff !important;
+	}
+
+	.nav-link:hover {
+		color: #d2b7d9 !important;
+	}
+
+	.nav-link:active {
+		color: #a570b2 !important;
+	}
+
+}
