--- a/backServer/vistas/css/ti_vista-flota.css
+++ b/backServer/vistas/css/ti_vista-flota.css
@@ -21,6 +21,28 @@ nav {
 	margin-right: 8px;
 }
 
+.btn-lg{
+	--bs-btn-font-weight: 800;
+	letter-spacing: 2px;
+}
+
+.btn-outline-success-m {
+	--bs-btn-color: #fff;
+	--bs-btn-border-color: none;
+	--bs-btn-hover-color: #fff;
+	--bs-btn-hover-bg: #47476b;
+	--bs-btn-hover-border-color: none;
+	--bs-btn-focus-shadow-rgb: 25, 135, 84;
+	--bs-btn-active-color: #fff;
+	--bs-btn-active-bg: #47476b;
+	--bs-btn-active-border-color: none;
+	--bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+	--bs-btn-disabled-color: #47476b;
+	--bs-btn-disabled-bg: transparent;
+	--bs-btn-disabled-border-color: #47476b;
+	--bs-gradient: none;
+}
+
 .btn-outline-success {
 	--bs-btn-color: #fff;
 	--bs-btn-border-color: #47476b;
@@ -65,6 +87,7 @@ header {
 	text-shadow: 0 0 6px rgba(0, 0, 0, .5);
 }
 
+
 .card {
 	border: 0;
 	background: transparent;
@@ -102,10 +125,9 @@ header {
 	transform: scale(1);
 }
 
-
 .dropdown-menu {
 	background-color: #272727e6;
-	z-index: 1000x;
+	z-index: 1000;
 }
 
 .dropdown-item {
