--- a/backServer/vistas/css/add_flote.css
+++ b/backServer/vistas/css/add_flote.css
@@ -7,9 +7,13 @@ body {
 
 nav {
 	background: #fff;
-	background: -webkit-linear-gradient(to right, hsla(256, 35%, 47%, 0.898), hsla(284, 100%, 9%, 0.858)), url(../logo-m.png);
-	background: linear-gradient(to right, hsla(256, 35%, 47%, 0.898), hsla(284, 100%, 9%, 0.858)), url(../logo-m.png);
-	z-index: 100;
+	background: -webkit-linear-gradient(to right, hsla(256, 35%, 47%, 0.898), hsla(284, 100%, 9%, 0.858)), url(../white.png);
+	background: linear-gradient(to right, hsla(256, 35%, 47%, 0.898), hsla(284, 100%, 9%, 0.858)), url(../white.png);
+	background-size: cover;
+	background-position: center;
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+	overflow: hidden;
 }
 
 .navbar {
