--- a/backServer/vistas/css/flota.css
+++ b/backServer/vistas/css/flota.css
@@ -7,9 +7,13 @@ body {
 
 nav {
 	background: #fff;
-	background: -webkit-linear-gradient(to right, hsla(256, 35%, 47%, 0.898), hsla(284, 100%, 9%, 0.858)), url(../logo-m.png);
-	background: linear-gradient(to right, hsla(256, 35%, 47%, 0.898), hsla(284, 100%, 9%, 0.858)), url(../logo-m.png);
-	z-index: 100;
+	background: -webkit-linear-gradient(to right, hsla(256, 35%, 47%, 0.898), hsla(284, 100%, 9%, 0.858)), url(../white.png);
+	background: linear-gradient(to right, hsla(256, 35%, 47%, 0.898), hsla(284, 100%, 9%, 0.858)), url(../white.png);
+	background-size: cover;
+	background-position: center;
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+	overflow: hidden;
 }
 
 .navbar {
@@ -49,7 +53,7 @@ nav {
 	display: none !important;
 }
 
-@media only screen and (max-width: 820px) {
+@media only screen and (max-width: 770px) {
 	.no-responsive {
 		display: none !important;
 	}
