--- a/backServer/vistas/css/flota.css
+++ b/backServer/vistas/css/flota.css
@@ -56,6 +56,12 @@ nav {
 	--bs-btn-disabled-bg: transparent;
 	--bs-btn-disabled-border-color: #ced4da;
 	--bs-gradient: none;
+	margin-left: 3px;
+}
+
+.fa-xmark {
+	font-size: 17px;
+	margin-top: 3px;
 }
 
 .card {
