--- a/backServer/vistas/css/maintenance_history.css
+++ b/backServer/vistas/css/maintenance_history.css
@@ -47,19 +47,26 @@ nav {
 
 .btn-outline-dark {
 	--bs-btn-color: #000;
-	--bs-btn-border-color: #ced4da;
-	--bs-btn-hover-color: #fff;
-	--bs-btn-hover-bg: #654ea3;
-	--bs-btn-hover-border-color: #654ea3;
+	--bs-btn-border-color: none;
+	--bs-btn-hover-color: #654ea3;
+	--bs-btn-hover-bg: none;
+	--bs-btn-hover-border-color: none;
 	--bs-btn-focus-shadow-rgb: 33, 37, 41;
-	--bs-btn-active-color: #fff;
-	--bs-btn-active-bg: #22002e;
-	--bs-btn-active-border-color: #22002e;
+	--bs-btn-active-color: #22002e;
+	--bs-btn-active-bg: none;
+	--bs-btn-active-border-color: none;
 	--bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
 	--bs-btn-disabled-color: #000;
 	--bs-btn-disabled-bg: transparent;
 	--bs-btn-disabled-border-color: #ced4da;
 	--bs-gradient: none;
+}
+
+.btn-lg {
+    --bs-btn-padding-y: .5rem;
+    --bs-btn-padding-x: 1rem;
+    --bs-btn-font-size: 1.25rem;
+    --bs-btn-border-radius: .5rem;
 }
 
 .responsive {
