--- a/backServer/vistas/css/flota.css
+++ b/backServer/vistas/css/flota.css
@@ -64,6 +64,11 @@ nav {
 	margin-top: 3px;
 }
 
+.imagen-flota {
+	width: 100%;
+	height: 100%;
+}
+
 .card {
 	align-items: center;
 	justify-content: center;
