--- a/backServer/vistas/css/flota.css
+++ b/backServer/vistas/css/flota.css
@@ -81,6 +81,23 @@ nav {
 	display: none !important;
 }
 
+#status > option {
+	user-select: none;
+}
+
+#status > .green {
+	color: transparent;
+	background-color: green;
+}
+#status > .yellow {
+	color: transparent;
+	background-color: yellow;
+}
+#status > .red {
+	color: transparent;
+	background-color: red;
+}
+
 @media only screen and (max-width: 885px) {
 	.no-responsive {
 		display: none !important;
