--- a/backServer/vistas/css/alerts.css
+++ b/backServer/vistas/css/alerts.css
@@ -24,11 +24,6 @@ nav {
 	margin-right: 8px;
 }
 
-.card {
-	border: 0 !important;
-	box-shadow: 0 0 6px 0 rgba(0, 0, 0, .5);
-}
-
 .btn-outline-success {
 	--bs-btn-color: #fff;
 	--bs-btn-border-color: #47476b;
@@ -39,7 +34,7 @@ nav {
 	--bs-btn-active-color: #fff;
 	--bs-btn-active-bg: #47476b;
 	--bs-btn-active-border-color: #47476b;
-	--bs-btn-active-shadow: inset 0 3px 5pxrgba(0, 0, 0, 0.125);
+	--bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
 	--bs-btn-disabled-color: #47476b;
 	--bs-btn-disabled-bg: transparent;
 	--bs-btn-disabled-border-color: #47476b;
@@ -61,13 +56,73 @@ nav {
 	--bs-btn-disabled-bg: transparent;
 	--bs-btn-disabled-border-color: #ced4da;
 	--bs-gradient: none;
+	margin-left: 3px;
+}
+
+.btn-outline-dark1 {
+	--bs-btn-color: #000;
+	--bs-btn-border-color: none;
+	--bs-btn-hover-color: #654ea3;
+	--bs-btn-hover-bg: none;
+	--bs-btn-hover-border-color: none;
+	--bs-btn-focus-shadow-rgb: 33, 37, 41;
+	--bs-btn-active-color: #22002e;
+	--bs-btn-active-bg: none;
+	--bs-btn-active-border-color: none;
+	--bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+	--bs-btn-disabled-color: #000;
+	--bs-btn-disabled-bg: transparent;
+	--bs-btn-disabled-border-color: #ced4da;
+	--bs-gradient: none;
+}
+
+.btn-lg {
+    --bs-btn-padding-y: 0;
+    --bs-btn-padding-x: .5rem;
+    --bs-btn-font-size: 1.25rem;
+    --bs-btn-border-radius: .5rem;
+}
+
+.fa-xmark {
+	font-size: 17px;
+	margin-top: 3px;
+}
+
+.imagen-flota {
+	width: 100%;
+	height: 100%;
+}
+
+.card {
+	align-items: center;
+	justify-content: center;
+	margin: auto;
+	border: 0 !important;
+	box-shadow: 0 0 6px 0 rgba(0, 0, 0, .5);
 }
 
 .responsive {
 	display: none !important;
 }
 
-@media only screen and (max-width: 695px) {
+#status > option {
+	user-select: none;
+}
+
+#status > .green {
+	color: transparent;
+	background-color: green;
+}
+#status > .yellow {
+	color: transparent;
+	background-color: yellow;
+}
+#status > .red {
+	color: transparent;
+	background-color: red;
+}
+
+@media only screen and (max-width: 885px) {
 	.no-responsive {
 		display: none !important;
 	}
