--- a/backServer/vistas/css/ti_vista-flota.css
+++ b/backServer/vistas/css/ti_vista-flota.css
@@ -5,8 +5,8 @@ body {
 
 nav {
 	background: #fff;
-	background: -webkit-linear-gradient(to right, hsla(256, 35%, 47%, 0.898), hsla(284, 100%, 9%, 0.858)), url(../white.png);
-	background: linear-gradient(to right, hsla(256, 35%, 47%, 0.898), hsla(284, 100%, 9%, 0.858)), url(../white.png);
+	background: -webkit-linear-gradient(to right, hsla(256, 35%, 47%, 0.898), hsla(284, 100%, 9%, 0.858)), url(../img/white.png);
+	background: linear-gradient(to right, hsla(256, 35%, 47%, 0.898), hsla(284, 100%, 9%, 0.858)), url(../img/white.png);
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
@@ -67,8 +67,8 @@ header {
 	display: flex;
 	height: 600px;
 	background: #654ea3;
-	background: -webkit-linear-gradient(to right, hsla(256, 35%, 47%, 0.666), hsla(284, 100%, 9%, 0.666)), url(../logo-m1.png);
-	background: linear-gradient(to right, hsla(256, 35%, 47%, 0.666), hsla(284, 100%, 9%, 0.666)), url(../logo-m1.png);
+	background: -webkit-linear-gradient(to right, hsla(256, 35%, 47%, 0.666), hsla(284, 100%, 9%, 0.666)), url(../img/logo-m1.png);
+	background: linear-gradient(to right, hsla(256, 35%, 47%, 0.666), hsla(284, 100%, 9%, 0.666)), url(../img/logo-m1.png);
 	background-size: cover;
 	background-position: center center;
 	position: relative;
