--- a/backServer/vistas/css/alerts.css
+++ b/backServer/vistas/css/alerts.css
@@ -77,28 +77,20 @@ nav {
 }
 
 .btn-lg {
-    --bs-btn-padding-y: 0;
-    --bs-btn-padding-x: .5rem;
+    --bs-btn-padding-y: .1rem;
+    --bs-btn-padding-x: 1rem;
     --bs-btn-font-size: 1.25rem;
     --bs-btn-border-radius: .5rem;
 }
 
-.fa-xmark {
-	font-size: 17px;
-	margin-top: 3px;
-}
-
-.imagen-flota {
-	width: 100%;
-	height: 100%;
-}
 
 .card {
-	align-items: center;
-	justify-content: center;
-	margin: auto;
 	border: 0 !important;
 	box-shadow: 0 0 6px 0 rgba(0, 0, 0, .5);
+}
+
+.card-body {
+	margin: auto;
 }
 
 .responsive {
@@ -122,7 +114,7 @@ nav {
 	background-color: red;
 }
 
-@media only screen and (max-width: 885px) {
+@media only screen and (max-width: 360px) {
 	.no-responsive {
 		display: none !important;
 	}
