--- a/backServer/vistas/css/add_maintenance.css
+++ b/backServer/vistas/css/add_maintenance.css
@@ -63,6 +63,12 @@ nav {
 	--bs-gradient: none;
 }
 
+footer {
+	text-align: center;
+	padding: 3px;
+	color: white;
+	}
+
 .responsive {
 	display: none !important;
 }
