--- a/backServer/vistas/css/flota.css
+++ b/backServer/vistas/css/flota.css
@@ -89,6 +89,12 @@ nav {
 	box-shadow: 0 0 6px 0 rgba(0, 0, 0, .5);
 }
 
+footer {
+	text-align: center;
+	padding: 3px;
+	color: white;
+	}
+
 #status > option {
 	user-select: none;
 }
