--- a/backServer/vistas/css/maintenance_history.css
+++ b/backServer/vistas/css/maintenance_history.css
@@ -74,6 +74,12 @@ nav {
 	margin: auto;
 }
 
+footer {
+	text-align: center;
+	padding: 3px;
+	color: white;
+	}
+
 .responsive {
 	display: none !important;
 }
