--- a/backServer/vistas/css/add_flote.css
+++ b/backServer/vistas/css/add_flote.css
@@ -58,6 +58,23 @@ nav {
 	--bs-gradient: none;
 }
 
+#status > option {
+	user-select: none;
+}
+
+#status > .green {
+	color: transparent;
+	background-color: green;
+}
+#status > .yellow {
+	color: transparent;
+	background-color: yellow;
+}
+#status > .red {
+	color: transparent;
+	background-color: red;
+}
+
 footer {
 	text-align: center;
 	padding: 3px;
