--- a/backServer/vistas/css/ti_vista-flota.css
+++ b/backServer/vistas/css/ti_vista-flota.css
@@ -159,15 +159,15 @@ footer {
 }
 
 .red {
-
+	background: red;
 }
 
 .green{
-
+	background: green;
 }
 
 .yellow {
-
+	background: yellow;
 }
 
 footer {
